--- a/16_Assignment_Pipe_FIFO/01_cp_using_Libcall/Makefile
+++ b/16_Assignment_Pipe_FIFO/01_cp_using_Libcall/Makefile
@@ -1,8 +1,8 @@
 cc = gcc
 
 cp_lb:	cp_lbcall.o 
-	$(cc) -o cp_lb cp_lbcall.o -lpthread
-#	export PATH= $PATH://home/cdac/Music/workserver/16_Assignment_Pipe_FIFO/01_cp_using_Libcall
+	$(cc) -o cp_lb cp_lbcall.o 
+#	export PATH= $PATH:/home/cdac/Music/workserver/16_Assignment_Pipe_FIFO/01_cp_using_Libcall
 
 cp_lbcall.o:	cp_lbcall.c
 	$(cc) -c -o cp_lbcall.o cp_lbcall.c
