Semaphores - Signalling and RDWR LOCK

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "makefile.extensionOutputFolder": "./.vscode",
     "files.associations": {
         "unistd.h": "c",
-        "time.h": "c"
+        "time.h": "c",
+        "semaphore.h": "c"
     }
 }
