--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "files.associations": {
         "unistd.h": "c",
         "time.h": "c",
-        "semaphore.h": "c"
+        "semaphore.h": "c",
+        "inet.h": "c"
     }
 }
